--- a/landing_page/public/css/style.css
+++ b/landing_page/public/css/style.css
@@ -167,7 +167,7 @@ hr {
   text-transform: uppercase;
   color: #fff;
   background-color: #be2f24;
-  background-image: linear-gradient(to right, #534b4b 0%, #e22525 100%);
+  background-image: linear-gradient(to right, #1b1919 0%, #e22525 100%);
   padding: 14px 34px;
   letter-spacing: 1px;
   margin: 0;
@@ -257,7 +257,7 @@ header .intro-text {
   height: 100px;
   padding: 30px 0;
   border-radius: 50%;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #534b4b 0%, #e22525 100%);
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
 }
 /* About Section */
@@ -276,7 +276,7 @@ header .intro-text {
 #about h2::after {
   position: absolute;
   content: "";
-  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  background: linear-gradient(to right, #534b4b 0%, #e22525 100%);
   height: 4px;
   width: 60px;
   bottom: 0;
@@ -291,7 +291,7 @@ header .intro-text {
 #about .about-text li:before {
   content: "\f00c";
   font-family: "FontAwesome";
-  color: #5ca9fb;
+  color: #e22525;
   font-size: 11px;
   font-weight: 300;
   padding-right: 8px;
@@ -310,7 +310,7 @@ header .intro-text {
 /* Services Section */
 #services {
   padding: 100px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #9b6f6f 0%, #a71919 100%);
   color: #fff;
 }
 #services .service-desc {
@@ -370,8 +370,8 @@ header .intro-text {
   color: #fff;
   background: linear-gradient(
     to right,
-    rgba(99, 114, 255, 0.8) 0%,
-    rgba(92, 169, 251, 0.8) 100%
+    rgba(6, 6, 7, 0.8) 0%,
+    rgba(216, 49, 37, 0.8) 100%
   );
   padding: 30% 0 0;
   height: 100%;
@@ -460,7 +460,7 @@ header .intro-text {
 /* Contact Section */
 #contact {
   padding: 100px 0 60px;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #9b6f6f 0%, #a71919 100%);
   color: rgba(255, 255, 255, 0.75);
 }
 #contact .section-title {
@@ -504,8 +504,8 @@ header .intro-text {
   border: 2px solid #fff;
 }
 #contact .btn-custom:hover {
-  color: #1f386e;
-  background: #fff;
+  color: #fff;
+  background: rgba(236, 1, 1, 0.459);
 }
 label {
   font-size: 12px;
@@ -580,7 +580,7 @@ label {
   transition: all 0.3s;
 }
 #contact .social i.fa:hover {
-  color: #608dfd;
+  color: #f70f0f;
   background: #fff;
 }
 /* Footer Section*/
