cambio en la disposicion de la imagen

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -355,7 +355,7 @@ header .intro-text {
   padding: 100px 0;
 }
 .portfolio-item {
-  margin: 15px 15px 0 -14px;
+  margin: 15px 0px 0px 0px;
 }
 
 .portfolio-item .hover-bg {
