--- a/public/css/style.css
+++ b/public/css/style.css
@@ -207,6 +207,7 @@ a:focus,
 .intro {
   display: table;
   width: 100%;
+  position: relative;
   padding: 0;
   background: url(../img/banner.png) center center no-repeat;
   background-color: #e5e5e5;
@@ -215,33 +216,10 @@ a:focus,
   background-size: cover;
   -o-background-size: cover;
 }
-.intro .overlay {
-  background: rgba(0, 0, 0, 0.2);
-}
-.intro h1 {
-  font-family: "Raleway", sans-serif;
-  color: #fff;
-  font-size: 82px;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 10px;
-}
-.intro h1 span {
-  font-weight: 800;
-  color: #b63333;
-}
-.intro p {
-  color: #fff;
-  font-size: 22px;
-  font-weight: 300;
-  line-height: 30px;
-  margin: 0 auto;
-  margin-bottom: 60px;
-}
-header .intro-text {
+.intro-text {
   padding-top: 350px;
   padding-bottom: 200px;
+  padding-left: 200px;
   text-align: center;
 }
 /* Features Section */
