--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,10 +63,10 @@ ol {
 }
 hr {
   height: 2px;
-  width: 70px;
+  width: 90%;
   text-align: center;
   position: relative;
-  background: #1e7a46;
+  background: #000000;
   margin-bottom: 20px;
   border: 0;
 }
@@ -224,19 +224,35 @@ a:focus,
 }
 /* Features Section */
 #features {
-  background: #f6f6f6;
-}
-#features i.fa {
-  font-size: 38px;
-  margin-bottom: 20px;
-  transition: all 0.5s;
+  padding: 100px 0;
   color: #fff;
-  width: 100px;
-  height: 100px;
-  padding: 30px 0;
-  border-radius: 50%;
-  background: linear-gradient(to right, #534b4b 0%, #e22525 100%);
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
+}
+#features .service-desc {
+  margin: 10px 10px 20px;
+}
+#features h2 {
+  color: rgb(0, 0, 0);
+}
+#features .section-title h2::after {
+  position: absolute;
+  content: "";
+  background: linear-gradient(to right, #a58787 0%, #b63333 100%);
+  height: 4px;
+  width: 60px;
+  bottom: 0;
+  margin-left: -30px;
+  left: 50%;
+}
+#features h3 {
+  font-weight: 500;
+  padding: 5px 0;
+  color: rgb(0, 0, 0);
+}
+#features p {
+  color: rgba(0, 0, 0, 0.75);
+}
+#features .service-desc {
+  margin-bottom: 40px;
 }
 /* About Section */
 #about {
