--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
 @media screen and (max-width: 400px) {
-  #features {
-    padding: 20px;
-    width: 111%;
-  }
+  #features,
   #about,
   #services,
   #testimonials,
