--- a/public/css/style.css
+++ b/public/css/style.css
@@ -256,466 +256,523 @@ a:focus,
   text-align: center;
 }
 
-/* Features Section */
-#features {
-  padding-top: 100px;
-  color: #fff;
-}
 
-#features .service-desc {
-  margin: 10px 10px 20px;
-}
-
-#features h2 {
-  color: rgb(0, 0, 0);
-}
-
-#features .section-title h2::after {
-  position: absolute;
-  content: "";
-  background: linear-gradient(to right, #a58787 0%, #b63333 100%);
-  height: 4px;
-  width: 60px;
-  bottom: 0;
-  margin-left: -30px;
-  left: 50%;
-}
-
-#features h3 {
-  font-weight: 500;
-  padding: 5px 0;
-  color: rgb(0, 0, 0);
-}
-
-#features p {
-  color: rgba(0, 0, 0, 0.75);
-}
-
-#features .service-desc {
-  margin-bottom: 40px;
-}
-
-/* About Section */
-.video-responsive {
-  position: relative;
-  padding-bottom: 56.25%;
-  /* 16/9 ratio */
-  padding-top: 30px;
-  /* IE6 workaround*/
-  height: 0;
-  overflow: hidden;
-}
-
-.video-responsive iframe,
-.video-responsive object,
-.video-responsive embed {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-
-#about {
-  padding-top: 100px;
-}
-
-#about h3 {
-  font-size: 22px;
-  margin: 0 0 20px;
-}
-
-#about h2 {
-  position: relative;
-  margin-bottom: 15px;
-  padding-bottom: 15px;
-}
-
-#about h2::after {
-  position: absolute;
-  content: "";
-  background: linear-gradient(to right, #534b4b 0%, #e22525 100%);
-  height: 4px;
-  width: 60px;
-  bottom: 0;
-  left: 0;
-}
-
-#about .about-text li {
-  margin-bottom: 6px;
-  margin-left: 6px;
-  list-style: none;
-  padding: 0;
-}
-
-#about .about-text li:before {
-  content: "\f00c";
-  font-family: "FontAwesome";
-  color: #e22525;
-  font-size: 11px;
-  font-weight: 300;
-  padding-right: 8px;
-}
-
-#about img {
-  width: 520px;
-  margin-top: 10px;
-  background: #fff;
-  border-right: 0;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.06);
-}
-
-#about p {
-  line-height: 24px;
-  margin: 30px 0;
-}
-
-/* Services Section */
-#services {
-  padding: 100px 0;
-  background: linear-gradient(to right, #9b6f6f 0%, #a71919 100%);
-  color: #fff;
-}
-
-#services .service-desc {
-  margin: 10px 10px 20px;
-}
-
-#services h2 {
-  color: #fff;
-}
-
-#services .section-title h2::after {
-  position: absolute;
-  content: "";
-  background: rgba(255, 255, 255, 0.3);
-  height: 4px;
-  width: 60px;
-  bottom: 0;
-  margin-left: -30px;
-  left: 50%;
-}
-
-#services i.fa {
-  font-size: 42px;
-  width: 120px;
-  height: 120px;
-  padding: 40px 0;
-  background: linear-gradient(to right, #a00606 0%, #7c9bbb 100%);
-  border-radius: 50%;
-  color: #fff;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
-}
-
-#services h3 {
-  font-weight: 500;
-  padding: 5px 0;
-  color: #fff;
-}
-
-#services p {
-  color: rgba(255, 255, 255, 0.75);
-}
-
-#services .service-desc {
-  margin-bottom: 40px;
-}
-
-/* Portfolio Section */
-#portfolio {
-  padding: 100px 0;
-}
-
-.portfolio-item {
-  margin: 15px 0px 0px 0px;
-}
-
-.portfolio-item .hover-bg {
-  overflow: hidden;
-  position: relative;
-  margin: 0;
-}
-
-.hover-bg .hover-text {
-  position: absolute;
-  text-align: center;
-  margin: 0 auto;
-  color: #fff;
-  background: linear-gradient(to right,
-      rgba(6, 6, 7, 0.8) 0%,
-      rgba(216, 49, 37, 0.8) 100%);
-  padding: 30% 0 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: all 0.5s;
-}
-
-.hover-bg .hover-text>h4 {
-  opacity: 0;
-  color: #fff;
-  -webkit-transform: translateY(100%);
-  transform: translateY(100%);
-  transition: all 0.3s;
-  font-size: 18px;
-  letter-spacing: 1px;
-  font-weight: 500;
-  text-transform: uppercase;
-}
-
-.hover-bg:hover .hover-text>h4 {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-  transform: translateY(0);
-}
-
-.hover-bg:hover .hover-text {
-  opacity: 1;
-}
-
-/* Testimonials Section */
-#testimonials {
-  padding: 100px 0;
-  background: #f6f6f6;
-}
-
-#testimonials i {
-  color: #e6e6e6;
-  font-size: 32px;
-  margin-bottom: 20px;
-}
-
-.testimonial {
-  position: relative;
-  padding: 20px;
-}
-
-.testimonial-image {
-  float: left;
-  margin-right: 15px;
-}
-
-.testimonial-image,
-.testimonial-image img {
-  display: block;
-  width: 64px;
-  height: 64px;
-  border-radius: 50%;
-}
-
-.testimonial-content {
-  position: relative;
-  overflow: hidden;
-}
-
-.testimonial-content p {
-  margin-bottom: 0;
-  font-size: 14px;
-  font-style: italic;
-}
-
-.testimonial-meta {
-  margin-top: 10px;
-  font-size: 15px;
-  font-weight: 600;
-  color: #666;
-}
-
-/* Team Section */
-#team {
-  padding: 100px 0;
-}
-
-#team h4 {
-  margin: 5px 0;
-}
-
-#team .team-img {
-  height: 250px;
-  width: 250px;
-  /*object-fit: cover;*/
-}
-
-#team .thumbnail {
-  background: transparent;
-  border: 0;
-}
-
-#team .thumbnail .caption {
-  padding: 10px 0 0;
-  color: #888;
-}
-
-/* Contact Section */
-#contact {
-  padding: 100px 0 60px;
-  background: linear-gradient(to right, #9b6f6f 0%, #a71919 100%);
-  color: rgba(255, 255, 255, 0.75);
-}
-
-#contact .section-title {
-  margin-bottom: 40px;
-}
-
-#contact .section-title p {
-  font-size: 16px;
-}
-
-#contact h2 {
-  color: #fff;
-  margin-top: 10px;
-  margin-bottom: 15px;
-  padding-bottom: 15px;
-}
-
-#contact .section-title h2::after {
-  position: absolute;
-  content: "";
-  background: rgba(255, 255, 255, 0.3);
-  height: 4px;
-  width: 60px;
-  bottom: 0;
-  left: 30px;
-}
-
-#contact h3 {
-  color: #fff;
-  margin-top: 80px;
-  margin-bottom: 25px;
-  padding-bottom: 20px;
-  font-weight: 400;
-}
-
-#contact form {
-  padding-top: 20px;
-}
-
-#contact .text-danger {
-  color: #cc0033;
-  text-align: left;
-}
-
-#contact .btn-custom {
-  margin: 30px 0;
-  background: transparent;
-  border: 2px solid #fff;
-}
-
-#contact .btn-custom:hover {
-  color: #fff;
-  background: rgba(236, 1, 1, 0.459);
-}
-
-label {
-  font-size: 12px;
-  font-weight: 400;
-  font-family: "Open Sans", sans-serif;
-  float: left;
-}
-
-#contact .form-control {
-  display: block;
-  width: 100%;
-  padding: 6px 12px;
-  font-size: 16px;
-  line-height: 1.42857143;
-  color: #444;
-  background-color: #fff;
-  background-image: none;
-  border: 1px solid #ddd;
-  border-radius: 0;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  -webkit-transition: none;
-  -o-transition: none;
-  transition: none;
-}
-
-#contact .form-control:focus {
-  border-color: #999;
-  outline: 0;
-  -webkit-box-shadow: transparent;
-  box-shadow: transparent;
-}
-
-.form-control::-webkit-input-placeholder {
-  color: #777;
-}
-
-.form-control:-moz-placeholder {
-  color: #777;
-}
-
-.form-control::-moz-placeholder {
-  color: #777;
-}
-
-.form-control:-ms-input-placeholder {
-  color: #777;
-}
-
-#contact .contact-item {
-  margin: 20px 0;
-}
-
-#contact .contact-item span {
-  color: rgba(255, 255, 255, 1);
-  margin-bottom: 10px;
-  display: block;
-}
-
-#contact .contact-item i.fa {
-  margin-right: 10px;
-}
-
-#contact .social {
-  border-top: 1px solid rgba(255, 255, 255, 0.15);
-  padding-top: 50px;
-  margin-top: 50px;
-  text-align: center;
-}
-
-#contact .social ul li {
-  display: inline-block;
-  margin: 0 20px;
-}
-
-#contact .social i.fa {
-  font-size: 22px;
-  width: 48px;
-  height: 48px;
-  padding: 12px 0;
-  border: 2px solid #fff;
-  color: #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-
-#contact .social i.fa:hover {
-  color: #f70f0f;
-  background: #fff;
-}
-
-/* Footer Section*/
-#footer {
-  background: #f6f6f6;
-  padding: 30px 0;
-}
-
-#footer p {
-  color: #888;
-  font-size: 14px;
-}
-
-#footer a {
-  color: #608dfd;
-}
-
-#footer a:hover {
-  border-bottom: 2px solid #608dfd;
-}
-
-@media (max-width: 768px) {
-  #about img {
-    margin: 50px 0;
+@media screen and (min-width: 600px) {
+  #video {
+    height: 80%;
+    width: 80%;
+    padding-bottom: 5%;
   }
 }
+
+@media screen and (max-width: 600px) {
+  #video {
+    height: 40%;
+    width: 100%;
+    padding-bottom: 5%;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  #video-responsive {
+    height: 60%;
+    width: 100%;
+    padding-bottom: 10%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #video-responsive {
+    height: 40%;
+    width: 100%;
+    padding-bottom: 10%;
+  }
+}
+
+  #bikeAlert {
+    padding-top: 80px;
+    background: linear-gradient(to right, #9b6f6f 0%, #a71919 100%);
+    color: #fff;
+  }
+
+  #bikeAlert h2 {
+    color: #fff;
+  }
+
+  #bikeAlert h3 {
+    font-weight: 500;
+    padding: 5px 0;
+    color: #fff;
+  }
+
+  #bikeAlert p {
+    color: rgba(255, 255, 255, 0.75);
+    align-: justify;
+  }
+
+  /* Features Section */
+  #features {
+    padding-top: 100px;
+    color: #fff;
+  }
+
+  #features .service-desc {
+    margin: 10px 10px 20px;
+  }
+
+  #features h2 {
+    color: rgb(0, 0, 0);
+  }
+
+  #features .section-title h2::after {
+    position: absolute;
+    content: "";
+    background: linear-gradient(to right, #a58787 0%, #b63333 100%);
+    height: 4px;
+    width: 60px;
+    bottom: 0;
+    margin-left: -30px;
+    left: 50%;
+  }
+
+  #features h3 {
+    font-weight: 500;
+    padding: 5px 0;
+    color: rgb(0, 0, 0);
+  }
+
+  #features p {
+    color: rgba(0, 0, 0, 0.75);
+  }
+
+  #features .service-desc {
+    margin-bottom: 40px;
+  }
+
+  /* About Section */
+  .video-responsive {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16/9 ratio */
+    padding-top: 30px;
+    /* IE6 workaround*/
+    height: 0;
+    overflow: hidden;
+  }
+
+  .video-responsive iframe,
+  .video-responsive object,
+  .video-responsive embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  #about {
+    padding-top: 100px;
+    padding-bottom: 50px;
+  }
+
+  #about h3 {
+    font-size: 22px;
+    margin: 0 0 20px;
+  }
+
+  #about h2 {
+    position: relative;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+  }
+
+  #about h2::after {
+    position: absolute;
+    content: "";
+    background: linear-gradient(to right, #a58787 0%, #b63333 100%);
+    height: 4px;
+    width: 60px;
+    bottom: 0;
+    left: 0;
+  }
+
+  #about .about-text li {
+    margin-bottom: 6px;
+    margin-left: 6px;
+    list-style: none;
+    padding: 0;
+  }
+
+  #about .about-text li:before {
+    content: "\f00c";
+    font-family: "FontAwesome";
+    color: #e22525;
+    font-size: 11px;
+    font-weight: 300;
+    padding-right: 8px;
+  }
+
+  #about img {
+    width: 520px;
+    margin-top: 10px;
+    background: #fff;
+    border-right: 0;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.06);
+  }
+
+  #about p {
+    line-height: 24px;
+    margin: 30px 0;
+    text-align: justify;
+  }
+
+  /* Services Section */
+  #services {
+    padding: 100px 0;
+    background: linear-gradient(to right, #9b6f6f 0%, #a71919 100%);
+    color: #fff;
+  }
+
+  #services .service-desc {
+    margin: 10px 10px 20px;
+  }
+
+  #services h2 {
+    color: #fff;
+  }
+
+  #services .section-title h2::after {
+    position: absolute;
+    content: "";
+    background: linear-gradient(to right, #a58787 0%, #b63333 100%);
+    height: 4px;
+    width: 60px;
+    bottom: 0;
+    margin-left: -30px;
+    left: 50%;
+  }
+
+  #services i.fa {
+    font-size: 42px;
+    width: 120px;
+    height: 120px;
+    padding: 40px 0;
+    background: linear-gradient(to right, #a00606 0%, #7c9bbb 100%);
+    border-radius: 50%;
+    color: #fff;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
+  }
+
+  #services h3 {
+    font-weight: 500;
+    padding: 5px 0;
+    color: #fff;
+  }
+
+  #services p {
+    color: rgba(255, 255, 255, 0.75);
+    text-align: justify;
+  }
+
+  #services .service-desc {
+    margin-bottom: 40px;
+  }
+
+  /* Portfolio Section */
+  #portfolio {
+    padding: 100px 0;
+  }
+
+  .portfolio-item {
+    margin: 15px 0px 0px 0px;
+  }
+
+  .portfolio-item .hover-bg {
+    overflow: hidden;
+    position: relative;
+    margin: 0;
+  }
+
+  .hover-bg .hover-text {
+    position: absolute;
+    text-align: center;
+    margin: 0 auto;
+    color: #fff;
+    background: linear-gradient(to right,
+        rgba(6, 6, 7, 0.8) 0%,
+        rgba(216, 49, 37, 0.8) 100%);
+    padding: 30% 0 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: all 0.5s;
+  }
+
+  .hover-bg .hover-text>h4 {
+    opacity: 0;
+    color: #fff;
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+    transition: all 0.3s;
+    font-size: 18px;
+    letter-spacing: 1px;
+    font-weight: 500;
+    text-transform: uppercase;
+  }
+
+  .hover-bg:hover .hover-text>h4 {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  .hover-bg:hover .hover-text {
+    opacity: 1;
+  }
+
+  /* Testimonials Section */
+  #testimonials {
+    padding: 100px 0;
+    background: #f6f6f6;
+  }
+
+  #testimonials i {
+    color: #e6e6e6;
+    font-size: 32px;
+    margin-bottom: 20px;
+  }
+
+  .testimonial {
+    position: relative;
+    padding: 20px;
+  }
+
+  .testimonial-image {
+    float: left;
+    margin-right: 15px;
+  }
+
+  .testimonial-image,
+  .testimonial-image img {
+    display: block;
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+  }
+
+  .testimonial-content {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .testimonial-content p {
+    margin-bottom: 0;
+    font-size: 14px;
+    font-style: italic;
+  }
+
+  .testimonial-meta {
+    margin-top: 10px;
+    font-size: 15px;
+    font-weight: 600;
+    color: #666;
+  }
+
+  /* Team Section */
+  #team {
+    padding: 100px 0;
+  }
+
+  #team h4 {
+    margin: 5px 0;
+  }
+
+  #team .team-img {
+    height: 250px;
+    width: 250px;
+    /*object-fit: cover;*/
+  }
+
+  #team .thumbnail {
+    background: transparent;
+    border: 0;
+  }
+
+  #team .thumbnail .caption {
+    padding: 10px 0 0;
+    color: #888;
+  }
+
+  /* Contact Section */
+  #contact {
+    padding: 100px 0 60px;
+    background: linear-gradient(to right, #9b6f6f 0%, #a71919 100%);
+    color: rgba(255, 255, 255, 0.75);
+  }
+
+  #contact .section-title {
+    margin-bottom: 40px;
+  }
+
+  #contact .section-title p {
+    font-size: 16px;
+  }
+
+  #contact h2 {
+    color: #fff;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+  }
+
+  #contact .section-title h2::after {
+    position: absolute;
+    content: "";
+    background: linear-gradient(to right, #a58787 0%, #b63333 100%);
+    height: 4px;
+    width: 60px;
+    bottom: 0;
+    left: 30px;
+  }
+
+  #contact h3 {
+    color: #fff;
+    margin-top: 80px;
+    margin-bottom: 25px;
+    padding-bottom: 20px;
+    font-weight: 400;
+  }
+
+  #contact form {
+    padding-top: 20px;
+  }
+
+  #contact .text-danger {
+    color: #cc0033;
+    text-align: left;
+  }
+
+  #contact .btn-custom {
+    margin: 30px 0;
+    background: transparent;
+    border: 2px solid #fff;
+  }
+
+  #contact .btn-custom:hover {
+    color: #fff;
+    background: rgba(236, 1, 1, 0.459);
+  }
+
+  label {
+    font-size: 12px;
+    font-weight: 400;
+    font-family: "Open Sans", sans-serif;
+    float: left;
+  }
+
+  #contact .form-control {
+    display: block;
+    width: 100%;
+    padding: 6px 12px;
+    font-size: 16px;
+    line-height: 1.42857143;
+    color: #444;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ddd;
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none;
+  }
+
+  #contact .form-control:focus {
+    border-color: #999;
+    outline: 0;
+    -webkit-box-shadow: transparent;
+    box-shadow: transparent;
+  }
+
+  .form-control::-webkit-input-placeholder {
+    color: #777;
+  }
+
+  .form-control:-moz-placeholder {
+    color: #777;
+  }
+
+  .form-control::-moz-placeholder {
+    color: #777;
+  }
+
+  .form-control:-ms-input-placeholder {
+    color: #777;
+  }
+
+  #contact .contact-item {
+    margin: 20px 0;
+  }
+
+  #contact .contact-item span {
+    color: rgba(255, 255, 255, 1);
+    margin-bottom: 10px;
+    display: block;
+  }
+
+  #contact .contact-item i.fa {
+    margin-right: 10px;
+  }
+
+  #contact .social {
+    border-top: 1px solid rgba(255, 255, 255, 0.15);
+    padding-top: 50px;
+    margin-top: 50px;
+    text-align: center;
+  }
+
+  #contact .social ul li {
+    display: inline-block;
+    margin: 0 20px;
+  }
+
+  #contact .social i.fa {
+    font-size: 22px;
+    width: 48px;
+    height: 48px;
+    padding: 12px 0;
+    border: 2px solid #fff;
+    color: #fff;
+    border-radius: 50%;
+    transition: all 0.3s;
+  }
+
+  #contact .social i.fa:hover {
+    color: #f70f0f;
+    background: #fff;
+  }
+
+  /* Footer Section*/
+  #footer {
+    background: #f6f6f6;
+    padding: 30px 0;
+  }
+
+  #footer p {
+    color: #888;
+    font-size: 14px;
+  }
+
+  #footer a {
+    color: #608dfd;
+  }
+
+  #footer a:hover {
+    border-bottom: 2px solid #608dfd;
+  }
+
+  @media (max-width: 768px) {
+    #about img {
+      margin: 50px 0;
+    }
+  }
